fixed width of login form on mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1023,10 +1023,7 @@ small {
     margin: 0 auto;
   }
 
-  main {
-    width: 90%;
-    max-width: 90vw;
-  }
+ 
 
   main h1 {
     font-size: 1.1rem;
